tests/invalid/Rational_Invalid_2.whiley
function f(real r) -> int:
    bool x, int y
    x / y = r
    return 1
